# ReviewPulse

./: .env.example  .gitignore  Assignment.md  CLAUDE.md  README.md  SUBMISSION.md  docker-compose.yml
backend/: .env.example  Procfile  Untitled  alembic.ini  pyproject.toml  pytest.ini  requirements.txt  setup_alembic.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py  001_initial_schema.py  002_job_idempotency.py
backend/app/: __init__.py  auth.py  celery_app.py  config.py  database.py  dependencies.py  logging_config.py  main.py  models.py  tasks.py
backend/app/api/: analytics.py  auth_routes.py  authors.py  books.py  books_routes.py  deps.py  discovery_routes.py  inbound_webhook_routes.py  jobs.py  jobs_routes.py  metrics.py  metrics_routes.py  reviews.py  router.py  schemas.py  search.py  webhooks.py
backend/app/core/: config.py  logging.py  security.py
backend/app/data/: sample_reviews.json
backend/app/db/: base.py
backend/app/llm/: __init__.py  base.py  mock.py  openai_provider.py  openrouter.py  openrouter_provider.py  pricing.py  protocol.py  schemas.py
backend/app/models/: __init__.py  author.py  book.py  ingestion_job.py  llm_usage.py  review.py  (+1 more)
backend/scripts/: seed_data.py  seed_db.py  seed_kaggle.py
backend/tests/: conftest.py  test_analysis.py  test_api_books.py  test_f1_live.py  test_inbound_webhook.py  test_ingest_idempotency.py  test_ingestion.py  test_isolation.py  test_jobs.py  test_mock_llm.py  test_pipeline_integration.py  test_reviews.py  test_security.py  test_tenant_isolation.py  test_webhook_verify.py
(+77 files in other folders)
